syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package com.onehundredtwentyninth.rangiffler;

option java_multiple_files = true;
option java_package = "com.onehundredtwentyninth.rangiffler.grpc";
option java_outer_classname = "RangifflerPhotoProto";

service RangifflerPhotoService {
  rpc GetPhotos(PhotoRequest) returns(PhotoResponse) {}
  rpc CreatePhoto(CreatePhotoRequest) returns(Photo) {}
  rpc UpdatePhoto(UpdatePhotoRequest) returns(Photo) {}
  rpc LikePhoto(LikePhotoRequest) returns(Photo) {}
  rpc DeletePhoto(DeletePhotoRequest) returns (google.protobuf.BoolValue) {}
}

message PhotoRequest {
  repeated string userIds = 5;
  int32 page = 2;
  int32 size = 3;
}

message CreatePhotoRequest {
  string userId = 6;
  bytes src = 2;
  string countryId = 3;
  string description = 4;
}

message UpdatePhotoRequest {
  string userId = 6;
  string id = 1;
  string countryId = 3;
  string description = 4;
}

message LikePhotoRequest {
  string photoId = 1;
  string userId = 2;
}

message DeletePhotoRequest {
  string photoId = 1;
  string userId = 2;
}

message PhotoResponse {
  repeated Photo photos = 1;
  bool hasNext = 2;
}

message Photo {
  string id = 1;
  bytes src = 2;
  string countryId = 3;
  string description = 4;
  google.protobuf.Timestamp creationDate = 5;
  Likes likes = 6;
}

message Likes {
  int32 total = 1;
  repeated Like likes = 2;
}

message Like {
  string id = 1;
  string userId = 2;
  google.protobuf.Timestamp creationDate = 3;
}